log
Wed Mar 16 18:35:09 HSP 2022: 
 tests:  0|6
total_score: 0/70
1144b97
Wed Mar 16 18:50:23 HSP 2022: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a18acb3
Wed Mar 16 19:22:34 HSP 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:16: error: invalid initializer
     Node aux = list->current;
                ^~~~
list.c:47:10: error: unused variable 'aux' [-Werror=unused-variable]
     Node aux = list->current;
          ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
e374070
Thu Mar 17 10:36:06 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:5: error: unknown type name 'Nodo'
     Nodo aux = list->current;
     ^~~~
list.c:47:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     Nodo aux = list->current;
                ^~~~
list.c:49:15: error: invalid type argument of '->' (have 'int')
     return aux->data;
               ^~
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8e1fad9
Thu Mar 17 10:37:14 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
08ebd7d
